upgrade dependencies and java to 11 (#74)
Co-authored-by: Björn Wenzel <bjoern.wenzel@dbschenker.com>